// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GridChip should emit a click event 1`] = `
<div
  aria-disabled="false"
  class="chip hover focus"
  role="row"
  style="overflow: hidden; position: relative;"
>
  
  <span
    aria-disabled="false"
    role="gridcell"
  >
    <span
      class="chip-label-button"
      role="button"
      tabindex="0"
    >
      <!--v-if-->
      <span
        class="label"
        id="chip-text"
        title="false"
      >
        
        
        Test
        
        
      </span>
    </span>
  </span>
  <!--v-if-->
  
  <!---->
</div>
`;

exports[`GridChip should render a disabled chip 1`] = `
<div
  aria-disabled="true"
  class="chip disabled"
  role="row"
>
  
  <span
    aria-disabled="true"
    role="gridcell"
  >
    <span
      class="chip-label-button"
    >
      <!--v-if-->
      <span
        class="label"
        id="chip-text"
        title="false"
      >
        
        
        Test
        
        
      </span>
    </span>
  </span>
  <!--v-if-->
  
  <!--v-if-->
</div>
`;

exports[`GridChip should render a removable chip 1`] = `
<div
  aria-disabled="false"
  class="chip focus"
  role="row"
>
  
  <span
    aria-disabled="false"
    role="gridcell"
  >
    <span
      class="chip-label-button"
    >
      <!--v-if-->
      <span
        class="label"
        id="chip-text"
        title="false"
      >
        
        
        Test
        
        
      </span>
    </span>
  </span>
  <span
    class="chip-delete"
    role="gridcell"
  >
    <a
      aria-describedby="chip-text"
      aria-label="Remove"
      class="delete-icon"
      href="#"
      role="button"
    >
      <svg
        aria-hidden="true"
        class="feather-icon feather-icon-flex"
        focusable="false"
        role="img"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19,17.55,13.43,12,19,6.4A1,1,0,1,0,17.58,5L12,10.58,6.42,5A1,1,0,0,0,5,6.42L10.6,12,5,17.6A1,1,0,0,0,5,19a1,1,0,0,0,.71.29,1,1,0,0,0,.71-.3L12,13.41,17.6,19a1,1,0,0,0,.71.29A1,1,0,0,0,19,19,1,1,0,0,0,19,17.55Z"
        />
      </svg>
    </a>
  </span>
  
  <!--v-if-->
</div>
`;

exports[`GridChip should render a standard chip 1`] = `
<div
  aria-disabled="false"
  class="chip"
  role="row"
>
  
  <span
    aria-disabled="false"
    role="gridcell"
  >
    <span
      class="chip-label-button"
    >
      <!--v-if-->
      <span
        class="label"
        id="chip-text"
        title="false"
      >
        
        
        Test
        
        
      </span>
    </span>
  </span>
  <!--v-if-->
  
  <!--v-if-->
</div>
`;

exports[`GridChip should render a standard chip with icon 1`] = `
<div
  aria-disabled="false"
  class="chip"
  role="row"
>
  
  <span
    aria-disabled="false"
    role="gridcell"
  >
    <span
      class="chip-label-button"
    >
      <span
        class="chip-icon"
        role="presentation"
      >
        
        
        <span>
          *
        </span>
        
        
      </span>
      <span
        class="label"
        id="chip-text"
        title="false"
      >
        
        
        Test
        
        
      </span>
    </span>
  </span>
  <!--v-if-->
  
  <!--v-if-->
</div>
`;

exports[`GridChip should render condensed 1`] = `
<div
  aria-disabled="false"
  class="chip condensed"
  role="row"
>
  
  <span
    aria-disabled="false"
    role="gridcell"
  >
    <span
      class="chip-label-button"
    >
      <!--v-if-->
      <span
        class="label"
        id="chip-text"
        title="false"
      >
        
        
        Test
        
        
      </span>
    </span>
  </span>
  <!--v-if-->
  
  <!--v-if-->
</div>
`;

exports[`GridChip should render condensed from a group 1`] = `
<div
  aria-disabled="false"
  class="chip"
  role="row"
>
  
  <span
    aria-disabled="false"
    role="gridcell"
  >
    <span
      class="chip-label-button"
    >
      <!--v-if-->
      <span
        class="label"
        id="chip-text"
        title="false"
      >
        
        
        Test
        
        
      </span>
    </span>
  </span>
  <!--v-if-->
  
  <!--v-if-->
</div>
`;
